# rust-zserio

./: .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  flake.nix  rustfmt.toml  test.rs
.github/workflows/: release.yml  test.yml
crates/rust-zserio/: Cargo.toml  README.md
crates/rust-zserio/src/: main.rs
crates/zserio/: Cargo.toml  README.md
crates/zserio-cli/: Cargo.toml  README.md
crates/zserio-cli/src/: main.rs
crates/zserio-rs-build/: Cargo.toml  README.md
crates/zserio-rs-build/src/: lib.rs  main.rs
crates/zserio-rs-build/src/internal/: generator.rs
crates/zserio-rs-build/src/internal/ast/: evaluate_mixing_native_types.rs  expression.rs  field.rs  zsubtype.rs
crates/zserio-rs-build/src/internal/compiler/: symbol_scope.rs
crates/zserio-rs-build/src/internal/generator/: bitsize.rs  decode.rs  encode.rs  expression.rs  file_generator.rs  mod_file.rs  model.rs  package.rs  packed_contexts.rs  pass_parameters.rs  preamble.rs  subtype.rs  types.rs  zbitmask.rs  zchoice.rs  zconst.rs  zenum.rs  zstruct.rs  zunion.rs
crates/zserio/src/: doctest.rs  error.rs  lib.rs  numbits.rs  vendor.rs
crates/zserio/src/ztype/: alignment.rs  array.rs  bit_alignment.rs  bytes_type.rs  extern_type.rs  float_encode.rs  limits.rs  mod.rs  numbits.rs  reader.rs  string_decode.rs  varint_bitsize.rs  varint_decode.rs  varint_encode.rs  varuint_bitsize.rs  varuint_decode.rs  writer.rs
crates/zserio/src/ztype/array_traits/: array_trait.rs  bit_buffer_array_trait.rs  bit_field_array_trait.rs  boolean_array_trait.rs  byte_buffer_array_trait.rs  delta_context.rs  float16_array_trait.rs  float32_array_trait.rs  float64_array_trait.rs  mod.rs  object_array_trait.rs  string_array_trait.rs  unsigned_bit_field_array_trait.rs  varint16_array_trait.rs  varint32_array_trait.rs  varint64_array_trait.rs  varint_array_trait.rs  varsize_array_trait.rs  varuint16_array_trait.rs  varuint32_array_trait.rs  varuint64_array_trait.rs  varuint_array_trait.rs
src/: doctest.rs  error.rs  internal.rs  lib.rs  main.rs  ztype.rs
src/internal/: ast.rs  generator.rs  model.rs  parser.rs  visitor.rs
src/internal/ast/: evaluate_mixing_native_types.rs  expression.rs  field.rs  mod.rs  package.rs  parameter.rs  type_reference.rs  zbitmask.rs  zchoice.rs  zconst.rs  zenum.rs  zfunction.rs  zstruct.rs  zsubtype.rs  zunion.rs
src/internal/compiler/: fundamental_type.rs  mod.rs  resolve_types.rs  symbol_scope.rs  template_instantiation.rs
src/internal/generator/: array.rs  bitsize.rs  casts.rs  decode.rs  encode.rs  expression.rs  file_generator.rs  function.rs  index_offsets.rs  mod.rs  mod_file.rs  model.rs  native_type.rs  new.rs  package.rs  packed_contexts.rs  pass_parameters.rs  preamble.rs  subtype.rs  types.rs  zbitmask.rs  zchoice.rs  zconst.rs  zenum.rs  zstruct.rs  zunion.rs
src/internal/model/: mod.rs  model.rs  package.rs
src/internal/parser/: gen.rs  generate.sh  mod.rs
src/internal/visitor/: visitor.rs
src/ztype/: alignment.rs  array.rs  array_traits.rs  bit_alignment.rs  bits_decode.rs  bits_encode.rs  bytes_type.rs  delta_context.rs  extern_type.rs  float_decode.rs  float_encode.rs  mod.rs  numbits.rs  reader.rs  string_decode.rs  string_encode.rs  traits.rs  varint_bitsize.rs  varint_decode.rs  varint_encode.rs  varuint_bitsize.rs  varuint_decode.rs  varuint_encode.rs  writer.rs
src/ztype/array_traits/: array_trait.rs  bit_buffer_array_trait.rs  bit_field_array_trait.rs  boolean_array_trait.rs  byte_buffer_array_trait.rs  delta_context.rs  float16_array_trait.rs  float32_array_trait.rs  float64_array_trait.rs  mod.rs  object_array_trait.rs  packing_context_node.rs  string_array_trait.rs  unsigned_bit_field_array_trait.rs  varint16_array_trait.rs  varint32_array_trait.rs  varint64_array_trait.rs  varint_array_trait.rs  varsize_array_trait.rs  varuint16_array_trait.rs  varuint32_array_trait.rs  varuint64_array_trait.rs  varuint_array_trait.rs
test/reference_modules/core/: types.zs
test/reference_modules/user/: testobject.zs
tests/: gen_reference_modules.sh
tests/compare-ref-impl-tests/: packed_arrays_test.py
tests/compare-ref-impl-tests/python/: generate_artifacts.py  main.py  offsets_test.py  packed_arrays_test.py  pyproject.toml
tests/compare-ref-impl-tests/rust/: Cargo.toml
tests/compare-ref-impl-tests/rust/src/: deserialize_artifacts.rs  main.rs  offsets_test.rs  packed_arrays_test.rs
tests/reference-module-lib/: Cargo.toml  build.rs
tests/reference-module-lib/src/: lib.rs
tests/reference_modules/: all.zs
tests/reference_modules/alignment/: alignment.zs
tests/reference_modules/ambiguous_types/: main.zs  other.zs
tests/reference_modules/bitmask_isset/: bitmask_isset.zs
tests/reference_modules/bitmask_test/: bitmask_test.zs
tests/reference_modules/complex_dot_expression/: complex_dot_expression.zs
tests/reference_modules/constants/: constants.zs
tests/reference_modules/core/: types.zs
tests/reference_modules/expr_numbits/: expr_numbits.zs
tests/reference_modules/integer_types/: integer_types.zs
tests/reference_modules/offsets/: offsets.zs
tests/reference_modules/optional_array/: optional_array.zs
tests/reference_modules/optional_values/: optional_values.zs
tests/reference_modules/packed_arrays/: packed_arrays.zs
tests/reference_modules/parameter_passing/: function_parameter.zs  index_operator.zs  parameter_passing.zs
tests/reference_modules/subtyped_dot_expression/: subtyped_enum.zs  (+2 more)
tests/round-trip-tests/: Cargo.toml  build.rs
tests/round-trip-tests/src/: alignment_test.rs  ambiguous_types_test.rs  array_bounds_test.rs  bitmask_isset_test.rs  bitmask_test.rs  constants_test.rs  debug_trait_test.rs  expr_numbits_test.rs  integer_types_test.rs  main.rs  offsets_test.rs  optional_values_test.rs  packed_arrays_test.rs  parameter_passing_bitmask_test.rs  parameter_passing_templates_test.rs  parameter_passing_test.rs  parameterized_array_length_test.rs  subtyped_dot_expression.rs  template_instantiation_test.rs  type_casts_test.rs  valueof_operator_test.rs
(+23 files in other folders)
