[workspace]

members = [
    "crates/zserio",
    ".",
    "tests/reference-module-lib",
    "tests/round-trip-tests",
    "tests/compare-ref-impl-tests/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Clemens Zangl <clemens.zangl@gmail.com>"]
documentation = "https://docs.rs/rust-zserio"
homepage = "https://github.com/Danaozhong/rust-zserio"
repository = "https://github.com/Danaozhong/rust-zserio"
license = "BSD-3-Clause"

[package]
name = "rust-zserio"
version = "0.0.0"
edition = "2021"
authors = ["Clemens Zangl <clemens.zangl@gmail.com>"]
exclude = [".pre-commit-config.yaml"]

description = """
Rust bindings for the zserio serialization protocol.
"""

documentation = "https://docs.rs/rust-zserio"
homepage = "https://github.com/Danaozhong/rust-zserio"
repository = "https://github.com/Danaozhong/rust-zserio"
license = "BSD-3-Clause"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
antlr-rust = "0.3.0-beta"
clap = { version = "4.2.7", features = ["derive"] }
codegen = "0.2.0"
itertools = "0.11.0"
log = "0.4.22"
prettyplease = "0.2.20"
stringcase = "0.3.0"
syn = "2.0.74"
walkdir = "2.3.2"
zserio = { version = "0.1.0", path = "crates/zserio" }

[dependencies.simple_logger]
version = "5.0.0"
default-features = false
features = ["colors", "stderr"]
