[workspace]
resolver = "2"

members = [
    "crates/rust-zserio",
    "crates/zserio",
    "crates/zserio-cli",
    "tests/reference-module-lib",
    "tests/round-trip-tests",
    "tests/compare-ref-impl-tests/rust",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Clemens Zangl <clemens.zangl@gmail.com>"]
documentation = "https://docs.rs/rust-zserio"
homepage = "https://github.com/Danaozhong/rust-zserio"
repository = "https://github.com/Danaozhong/rust-zserio"
license = "BSD-3-Clause"
keywords = ["zserio", "serialization", "nds", "ndslive"]

[profile.profiling]
inherits = "release"
debug = true
