[package]
name = "zserio"
description = "Runtime support for zserio"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitreader = "0.3.8"
duplicate = "1.0.0"
half = "2.4.1"
num = "0.4.3"
rust-bitwriter = "0.0.1"
thiserror = "1.0.63"

[dev-dependencies]
rstest = "0.22.0"
