[package]
name = "reference-module-lib"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader =  "0.3.8"
rust-bitwriter = "0.0.1"
rust-zserio = { path = "../.." }

[build-dependencies]
rust-zserio = { path = "../.." }
