[package]
name = "reference-module-lib"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmask-enum = "2.2.4"
bitreader = "0.3.8"
rust-bitwriter = "0.0.1"
zserio = { path = "../../crates/zserio" }

[build-dependencies]
zserio-cli = { path = "../../crates/zserio-cli" }
