[package]
name = "round-trip-tests"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader =  "0.3.8"
rust-bitwriter = "0.0.1"
rust-zserio = { path = "../.." }
reference-module-lib = { path = "../reference-module-lib" }

[build-dependencies]
rust-zserio = { path = "../.." }
