[package]
name = "round-trip-tests"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader =  "0.3.8"
rust-bitwriter = "0.0.1"
reference-module-lib = { path = "../reference-module-lib" }
zserio = { version = "0.1.0", path = "../../crates/zserio" }

[build-dependencies]
rust-zserio = { path = "../.." }
