[package]
name = "round-trip-tests"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader = "0.3.8"
rust-bitwriter = "0.0.1"
reference-module-lib = { path = "../reference-module-lib" }
zserio = { path = "../../crates/zserio" }
