[tool.poetry]
name = "rust-zserio-compare-to-reference-implementation-test"
version = "0.1.0"
description = ""
authors = ["Clemens Zangl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zserio = "2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
